fix(updatebot): add downstream branch name config

--- a/.updatebot.yml
+++ b/.updatebot.yml
@@ -1,5 +1,6 @@
 github:
   organisations:
-  - name: ryandawsonuk
+  - name: igdianov
     repositories:
     - name: downstream
+      branch: develop
