--- a/.updatebot.yml
+++ b/.updatebot.yml
@@ -5,4 +5,5 @@ github:
   - name: igdianov
     repositories:
     - name: downstream
-      branch: develop
+      # should be using default develop
+      # branch: develop
